Try fix for horizontal scroll bar by using relative units for width

--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,13 @@ body {
   font: 12px/18px "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif;
 }
 
+.page {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
 .hero {
-  width: 1440px;
+  max-width: 100%;
   height: 538px;
   margin: 0 auto;
   background: url(https://web.archive.org/web/20140301004302im_/http://images.apple.com/v/home/as/images/your_verse_hero.jpg) 50% 100% no-repeat;
@@ -20,12 +25,13 @@ body {
 
 .nav-container {
   padding-top: 83px;
+  width: 68%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .apple-nav-bar {
-  margin-left: auto;
-  margin-right: auto;
-  width: 980px;
+  width: 100%;
   height: 36px;
   display: flex;
   flex: 2 1 auto;
@@ -71,7 +77,7 @@ body {
 }
 
 #searchbar {
-  width: 90px;
+  width: 7em;
   height: 22px;
   z-index: 1;
   border-color: gray;
@@ -82,7 +88,7 @@ body {
 }
 
 #searchbar:focus {
-  width: 180px;
+  width: 14em;
   background-color: #fff;
 }
 
@@ -125,7 +131,7 @@ body {
 }
 
 .promos {
-  width: 1440px;
+  width: 100%;
   margin: 0 auto;
   padding-top: 2px;
 }
@@ -157,8 +163,8 @@ body {
 
 #footer-section {
   margin: 0 auto;
-  min-width: 980px;
-  width: 1440px;
+  min-width: 68%;
+  width: 1em;
   height: 90px;
   padding: 0;
   color: #6e6e6e;
@@ -168,7 +174,7 @@ body {
 }
 
 .footer-wrap {
-  width: 980px;
+  width: 100%;
   margin: 0 auto;
 }
 
